testsuite/tests/deriving/should_fail/T9071.stderr
[1 of 2] Compiling T9071a          (.hs -> .o)
[2 of 2] Compiling T9071           (.hs -> .o)

T9071.hs:7:37: error:
    Couldn't match kind ‘* -> *’ with ‘*’
      arising from the first field of ‘F’ (type ‘Mu (K a)’)
    When deriving the instance for (Functor F)
